# ruview-cathedral

./: AGENT.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  mqtt-integration.yml
archive/v1/tests/unit/: test_esp32_binary_parser.py
docs/: WITNESS-LOG-110.md  proof-of-capabilities.md  user-guide.md
docs/adr/: ADR-110-esp32-c6-firmware-extension.md  README.md
firmware/esp32-csi-node/: sdkconfig.defaults.esp32c6
firmware/esp32-csi-node/main/: CMakeLists.txt  Kconfig.projbuild  c6_lp_core.c  c6_lp_core.h  c6_timesync.c  csi_collector.c  main.c
firmware/esp32-csi-node/test/: Makefile  capture-3board-experiment.py
python/: README.md
scripts/: generate-witness-bundle.sh
v2/: Cargo.toml
v2/crates/wifi-densepose-bfld/src/: lib.rs  pipeline.rs
v2/crates/wifi-densepose-cathedral/: Cargo.toml  README.md
v2/crates/wifi-densepose-cathedral/src/: lib.rs
v2/crates/wifi-densepose-sensing-server/tests/: mqtt_integration.rs
v2/crates/wifi-densepose-temporal/: Cargo.toml
